--- a/app/views/layouts/_encab.html.erb
+++ b/app/views/layouts/_encab.html.erb
@@ -11,10 +11,10 @@
       </li>
        
       <li class="nav-item">
-        <a class="nav-link ml-1 pl-0" href="#"><i class="fa fa-shopping-cart fa-2x"></i> Ver Carrito (00)</a>
+        <a class="nav-link ml-1 pl-0" href="/productos/mostrar"><i class="fa fa-shopping-cart fa-2x"></i> Ver Carrito (<%= session[:numcar] %>)</a>
       </li>
       <li class="nav-item ml-5">
-         <a href="#" class="nav-link">Productos</a>
+         <a href="/productos" class="nav-link">Productos</a>
      </li>
       <li class="nav-item ml-5">
          <a href="#" class="nav-link">Registrese</a>
