--- a/app/views/prueba/index.html.erb
+++ b/app/views/prueba/index.html.erb
@@ -2,7 +2,7 @@
   <!-- <img class="card-img-top" src="" alt="Card image cap"> -->
   <%= image_tag("productos/board.jpg", :class => "card-img-top") %>
   <div class="card-body">
-    <h5 class="card-title">Board P85</h5>
+    <p>Board P85</p>
     <p class="card-text">Procesadores AMD</p>
   </div>
   <ul class="list-group list-group-flush">
