--- a/app/views/productos/listar.html.erb
+++ b/app/views/productos/listar.html.erb
@@ -1,7 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Productos</h1>
-
+<hr>
+<%= link_to 'Nuevo', new_producto_path, class:"btn btn-primary btn-sm mb-2" %>
 <table>
   <thead>
     <tr>
@@ -10,33 +11,29 @@
       <th>Descipcion</th>
       <th>Ref</th>
       <th>Precio</th>
-      <th>Idtipoproducto</th>
-      <th>Idcategoriaproducto</th>
-      <th>Idestadoproducto</th>
+      <th>Tipo</th>
+      <th>Categoria</th>   
       <th>Stock</th>
-      <th>Imagen</th>
-      <th>Eliminado</th>
-      <th colspan="3"></th>
+      <th>Imagen</th>  
+      <th>Estado</th>
+      
     </tr>
   </thead>
 
   <tbody>
-    <% @productos.each do |producto| %>
+    <% @productosExt.each do |producto| %>
       <tr>
-        <td><%= producto.id %></td>
-        <td><%= producto.nombre %></td>
-        <td><%= producto.descipcion %></td>
-        <td><%= producto.ref %></td>
-        <td><%= producto.precio %></td>
-        <td><%= producto.idtipoproducto %></td>
-        <td><%= producto.idcategoriaproducto %></td>
-        <td><%= producto.idestadoproducto %></td>
-        <td><%= producto.stock %></td>
-        <td><%= producto.imagen %></td>
-        <td><%= producto.eliminado %></td>
-        <td><%= link_to 'Show', producto %></td>
-        <td><%= link_to 'Edit', edit_producto_path(producto) %></td>
-        <td><%= link_to 'Destroy', producto, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><a href="/productos/<%= producto['id'] %>"><%= producto['id'] %></a></td>
+        <td><%= producto['nombre'] %></td>
+        <td><%= producto['descripcion'] %></td>
+        <td><%= producto['ref'] %></td>
+        <td><%= producto['precio'] %></td>
+        <td><%= producto['tipo'] %></td>
+        <td><%= producto['categoria'] %></td>       
+        <td><%= producto['stock'] %></td>
+        <td><%= producto['imagen'] %></td>
+        <td><%= producto['estado'] %></td>
+        
       </tr>
     <% end %>
   </tbody>
@@ -44,4 +41,3 @@
 
 <br>
 
-<%= link_to 'New Producto', new_producto_path %>
