--- a/app/views/productos/show.html.erb
+++ b/app/views/productos/show.html.erb
@@ -6,8 +6,8 @@
 </p>
 
 <p>
-  <strong>Descipcion:</strong>
-  <%= @producto.descipcion %>
+  <strong>Descripcion:</strong>
+  <%= @producto.descripcion %>
 </p>
 
 <p>
@@ -50,5 +50,5 @@
   <%= @producto.eliminado %>
 </p>
 
-<%= link_to 'Edit', edit_producto_path(@producto) %> |
-<%= link_to 'Back', productos_path %>
+<%= link_to 'Editar', edit_producto_path(@producto),class:"btn btn-success btn-sm" %> 
+<%= link_to 'Regresar', productos_path,class:"btn btn-info btn-sm ml-5" %>
