Inicio clase  30-May-2018

--- a/app/views/layouts/_navegador.html.erb
+++ b/app/views/layouts/_navegador.html.erb
@@ -19,7 +19,7 @@
                     <a href="/clientes">1. Clientes</a>
                 </li>
                 <li class="nav-item">
-                  <a href="/productos">2. Productos</a>
+                  <a href="/listarProductos">2. Productos</a>
                 </li>
                  <li class="nav-item">
                   <a href="/facturas">3. Facturas</a>
