--- a/app/views/parametros/index.html.erb
+++ b/app/views/parametros/index.html.erb
@@ -27,7 +27,5 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
+<%= will_paginate @parametros %>
 <%= link_to 'New Parametro', new_parametro_path %>
