--- a/app/views/parametros/mostrar.html.erb
+++ b/app/views/parametros/mostrar.html.erb
@@ -6,7 +6,7 @@
  <%= link_to 'Modificar', edit_parametro_path(@parametro),class:"btn btn-success btn-sm" %> 
  <p id="notice"><%= notice %></p>
 
- <table class="table-striped">
+ <table class="table table-striped">
   	<tr >
   		<td>Id</td>
  		<td>Atributo</td>
