--- a/app/views/productos/edit.html.erb
+++ b/app/views/productos/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Producto</h1>
+<h4>Modificar Producto</h4>
 
 <%= render 'form', producto: @producto %>
-
-<%= link_to 'Show', @producto %> |
-<%= link_to 'Back', productos_path %>
