--- a/app/views/productos/index.html.erb
+++ b/app/views/productos/index.html.erb
@@ -18,7 +18,7 @@
 
 		  </ul>
 		  <div class="card-body p-1 text-center">
-		  	<form action="/productos/agregar" method="POST">
+		  	<form action="agregarCarrito" method="POST">
 		  		Cant : <input type="number" name="cant" value="1" Style="height:28px;width:40px;">
 		  		<input type="hidden" name="id" value="<%= producto['id'] %>">
 		  		<input type="hidden" name="nombre" value="<%= producto['nombre'] %>">
