--- a/app/views/valorparametros/_form.html.erb
+++ b/app/views/valorparametros/_form.html.erb
@@ -1,5 +1,4 @@
-<a href="/valp/<%= @idvp %>" class="btn btn-info btn-sm mb-3">Regresar</a>
-<a href="#" onclick="document.getElementById('frm_valp').submit()" class="btn btn-primary btn-sm mb-3">Guardar</a>
+
 <%= form_with(model: valorparametro, local: true,id:"frm_valp") do |form| %>
  
   <% if valorparametro.errors.any? %>
@@ -14,32 +13,43 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :valor %>
+  <div class="form-group row">
+    <label for="valor" class="col-sm-2 col-form-label">Valor:</label>
+    <div class="col-sm-4">
     <%= form.text_field :valor, id: :valorparametro_valor %>
+    </div> 
   </div>
- <div class="field">
-    <%= form.label :parametro_id %>
-    <%= form.text_field :parametro_id, id: :valorparametro_parametro_id %>
+ <div class="form-group row">
+     <label for="parametro_id" class="col-sm-2 col-form-label">Parametro:</label>
+    <div class="col-sm-4">
+    <%= form.text_field :parametro_id, id: :valorparametro_parametro_id,:readonly => true,value:@idp %>
+    </div> 
   </div>
-  <div class="field">
-    <%= form.label :estadovalorparametro %>
+  <div class="form-group row">
+     <label for="valor" class="col-sm-2 col-form-label">Estado:</label>
+    <div class="col-sm-4">
     <%= form.text_field :estadovalorparametro, id: :valorparametro_estadovalorparametro %>
+    </div> 
   </div>
 
-  <div class="field">
-    <%= form.label :orden %>
+  <div class="form-group row">
+     <label for="orden" class="col-sm-2 col-form-label">Orden:</label>
+    <div class="col-sm-4">
     <%= form.text_field :orden, id: :valorparametro_orden %>
+    </div> 
   </div>
 
-  <div class="field">
-    <%= form.label :eliminado %>
-    <%= form.check_box :eliminado, id: :valorparametro_eliminado %>
-  </div>
-
-  <div class="field">
-    <%= form.label :idpadre %>
+  <div class="form-group row">
+    <label for="idpadre" class="col-sm-2 col-form-label">Padre:</label>
+    <div class="col-sm-4">
     <%= form.number_field :idpadre, id: :valorparametro_idpadre %>
+    </div> 
   </div>
-
+  <div class="actions">
+    <%= form.submit "Guardar",class:"btn btn-warning btn-sm" %>
+    <% if @swope == 1 %>
+       <%= link_to 'Eliminar', :valorparametro,class:"btn btn-danger btn-sm ml-2", method: :delete, data: { confirm: 'Esta Seguro de ELiminar este Re?' } %>
+    <% end %>
+    <a href="/valp/<%= @idp %>" class="btn btn-info btn-sm mb-1">Regresar</a>
+  </div>
 <% end %>
