--- a/app/views/valorparametros/edit.html.erb
+++ b/app/views/valorparametros/edit.html.erb
@@ -1,4 +1,5 @@
-<h4>Editing Valorparametro</h4>
+<h4>Modificacion  Valor Parámetro</h4>
+<hr>
 <%= render 'form', valorparametro: @valorparametro %>
 
 
