--- a/app/assets/stylesheets/misEstilos.css
+++ b/app/assets/stylesheets/misEstilos.css
@@ -2,7 +2,8 @@
 .logo{
 	font-size: 2.5em;
 	font-family: 'Galada', cursive;
-	color:#0069D9
+	color:#0069D9;
+	margin-left: 0;
 }
 img{
 	width: 200px;
@@ -62,8 +63,9 @@ label{
 }
 
 #valp{
-   margin-left:-50px;
+   margin-left:0;
    padding:0;
+
 }
 
 .digg_pagination {
