--- a/app/views/productos/new.html.erb
+++ b/app/views/productos/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Producto</h1>
-
+<h4>Nuevo Producto</h4>
+<hr>
 <%= render 'form', producto: @producto %>
 
-<%= link_to 'Back', productos_path %>
+
