--- a/app/views/productos/show.html.erb
+++ b/app/views/productos/show.html.erb
@@ -49,6 +49,7 @@
   <strong>Eliminado:</strong>
   <%= @producto.eliminado %>
 </p>
-
-<%= link_to 'Editar', edit_producto_path(@producto),class:"btn btn-success btn-sm" %> 
-<%= link_to 'Regresar', productos_path,class:"btn btn-info btn-sm ml-5" %>
+<%  if @operaciones.include?("Modificar") %>
+   <%= link_to 'Editar', edit_producto_path(@producto),class:"btn btn-success btn-sm" %> 
+<% end %>
+<a href="/listarProductos" class="btn btn-info btn-sm ml-2">Regresar</a>
