--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,39 +1,35 @@
+<h4>Lista de Usuarios</h4>
+<hr>
+<%= link_to 'Nuevo', new_user_path,class:"btn btn-primary btn-sm" %>
+
 <p id="notice"><%= notice %></p>
 
-<h1>Users</h1>
-
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
+      <th>ID</th>
       <th>Usuario</th>
-      <th>Password</th>
-      <th>Identidad</th>
-      <th>Idtipoentidad</th>
-      <th>Idestadousuario</th>
-      <th>Idrol</th>
-      <th>Eliminado</th>
-      <th colspan="3"></th>
+      <th>Tipo Usuario</th>
+      <th>Nombre</th>    
+      <th>Rol</th>
+      <th>Estado</th>   
+     
     </tr>
   </thead>
 
   <tbody>
-    <% @users.each do |user| %>
+    <% @usersExt.each do |user| %>
       <tr>
-        <td><%= user.usuario %></td>
-        <td><%= user.password %></td>
-        <td><%= user.identidad %></td>
-        <td><%= user.idtipoentidad %></td>
-        <td><%= user.idestadousuario %></td>
-        <td><%= user.idrol %></td>
-        <td><%= user.eliminado %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><a href="/users/<%= user['id'] %>"><%= user['id'] %></a> </td>
+        <td><%= user['usuario'] %></td>
+        <td><%= user['tipo'] %></td>
+        <td><%= user['nombre'] %></td>  
+        <td><%= user['rol'] %></td>   
+        <td><%= user['estado'] %></td>          
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
 
-<%= link_to 'New User', new_user_path %>
+
