--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,11 @@
 <p id="notice"><%= notice %></p>
+<table>
 
 <p>
   <strong>Usuario:</strong>
   <%= @user.usuario %>
 </p>
 
-<p>
-  <strong>Password:</strong>
-  <%= @user.password %>
-</p>
 
 <p>
   <strong>Identidad:</strong>
@@ -30,10 +27,5 @@
   <%= @user.idrol %>
 </p>
 
-<p>
-  <strong>Eliminado:</strong>
-  <%= @user.eliminado %>
-</p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Editar', edit_user_path(@user) ,class:"btn btn-success btn-sm mb-2" %> 
+<%= link_to 'Back', users_path, class:"btn btn-info btn-sm mb-2 ml-2"%>
