--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -49,6 +49,8 @@
    </div>
   </div>
 
+//TODO: como sacar los parametros del combo 
+<!--TODO: como sacar los parametros del combo  -->
 <% estados = options_from_collection_for_select(@estados, "id","valor",user.idestadousuario) %>
   <div class="form-group row">
     <label for="idestadousuario" class="col-sm-2 col-form-label">Estado:</label>
