--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -5,6 +5,7 @@
 <table class="table-responsive">
   <thead>
     <tr>
+      <th>Id</th>
       <th>Nombres</th>
       <th>Apellidos</th>
       <th>Identificacion</th>
@@ -15,32 +16,27 @@
       <th>Telefonos</th>
       <th>Idtipocliente</th>
       <th>Idcategoriacliente</th>
-      <th>Idestado</th>
-      <th>Idgenero</th>
-      <th>Eliminado</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @clientes.each do |cliente| %>
+    <% @clientesExt.each do |cliente| %>
       <tr>
-        <td><%= cliente.nombres %></td>
-        <td><%= cliente.apellidos %></td>
-        <td><%= cliente.identificacion %></td>
-        <td><%= cliente.idtipoidentificacion %></td>
-        <td><%= cliente.razonSocial %></td>
-        <td><%= cliente.correo %></td>
-        <td><%= cliente.direccion %></td>
-        <td><%= cliente.telefonos %></td>
-        <td><%= cliente.idtipocliente %></td>
-        <td><%= cliente.idcategoriacliente %></td>
-        <td><%= cliente.idestado %></td>
-        <td><%= cliente.idgenero %></td>
-        <td><%= cliente.eliminado %></td>
-        <td><%= link_to 'Show', cliente %></td>
-        <td><%= link_to 'Edit', edit_cliente_path(cliente) %></td>
-        <td><%= link_to 'Destroy', cliente, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><a href="/clientes/<%= cliente['id'] %>"><%= cliente['id'] %></a></td>
+        <td><%= cliente["nombres"] %></td>
+        <td><%= cliente["apellidos"] %></td>
+        <td><%= cliente["identificacion"] %></td>
+        <td><%= cliente["Tipo_ID"] %></td>
+        <td><%= cliente["razonSocial"] %></td>
+        <td><%= cliente["correo"] %></td>
+        <td><%= cliente["direccion"] %></td>
+        <td><%= cliente["telefonos"] %></td>
+        <td><%= cliente["Tipo_Cliente"] %></td>
+        <td><%= cliente["Categoria_Cliente"] %></td>
+        <td><%= link_to 'Ver', cliente %></td>
+        <td><a href="/clientes/<%= cliente['id'] %>/edit">Actualizar</a></td>
+        <td><%= link_to 'Eliminar', cliente, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -48,4 +44,4 @@
 
 <br>
 
-<%= link_to 'New Cliente', new_cliente_path %>
+<%= link_to 'Nuevo Cliente', new_cliente_path %>
