--- a/app/views/layouts/_encab.html.erb
+++ b/app/views/layouts/_encab.html.erb
@@ -29,8 +29,8 @@
               <i class="fa fa-user fa-2x"></i> <%= session[:usuario] %>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#"><i class="fa fa-gear fa-fw"></i> Ver Perfil</a>
-              <a class="dropdown-item" href="#"><i class="fa fa-lock fa-fw"></i> Cambiar Password</a>
+              <a class="dropdown-item" href="/users/<%= session[:idusuario] %>/"><i class="fa fa-gear fa-fw"></i> Ver Perfil</a>
+              <a class="dropdown-item" href="/lchangepassword/<%= session[:idusuario] %>/"><i class="fa fa-lock fa-fw"></i> Cambiar Password</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="/logout"><i class="fa fa-sign-out fa-fw"></i> Salir</a>
             </div>
