añaniendo funciones del lado de admin

--- a/app/views/layouts/_encab.html.erb
+++ b/app/views/layouts/_encab.html.erb
@@ -16,8 +16,8 @@
       <li class="nav-item ml-25 p-2">
          <a href="/productos1" class="nav-link">Productos</a>
      </li>
-      <li class="nav-item ml-2 p-2">
-        <a href="/registrocliente" class="nav-link">Registrese</a>
+     <li class="nav-item ml-2 p-2">
+        <a href="<%= session[:idrol] ==26 ? '/registrousuario' :'/registrocliente' %>" class="nav-link">Registrese</a>
      </li>
      <li class="nav-item ml-2 p-2">
          <a href="/login" class="nav-link">Login</a>
