--- a/app/views/layouts/_navegador.html.erb
+++ b/app/views/layouts/_navegador.html.erb
@@ -27,6 +27,9 @@
                 <li class="nav-item">
                   <a href="/empleados">4. Empleados</a>
                 </li>
+                <li class="nav-item">
+                  <a href="/users">5. Usuarios</a>
+                </li>
 
           </ul>
         </div>
