--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -1,69 +1,95 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Nombres:</strong>
-  <%= @cliente.nombres %>
-</p>
 
-<p>
-  <strong>Apellidos:</strong>
-  <%= @cliente.apellidos %>
-</p>
 
-<p>
-  <strong>Identificacion:</strong>
-  <%= @cliente.identificacion %>
-</p>
+<div class="row mt-5 box-shadow p-2 color">
+  <div class="col-sm-4">
+    <div class="text-center">
+      <img src="https://image.flaticon.com/icons/svg/189/189061.svg" class="rounded" alt="...">
+    </div>
+  </div>  
+  
+  
+  <div class="col-sm-8">
+    <div class="row">
+      <div class="col">
+        <p>
+          <strong>Nombres:</strong>
+          <%= @cliente.nombres %>
+        </p>
 
-<p>
-  <strong>Idtipoidentificacion:</strong>
-  <%= @cliente.idtipoidentificacion %>
-</p>
+        <p>
+          <strong>Apellidos:</strong>
+          <%= @cliente.apellidos %>
+        </p>
 
-<p>
-  <strong>Razonsocial:</strong>
-  <%= @cliente.razonSocial %>
-</p>
+        <p>
+          <strong>Identificacion:</strong>
+          <%= @cliente.identificacion %>
+        </p>
 
-<p>
-  <strong>Correo:</strong>
-  <%= @cliente.correo %>
-</p>
+        <p>
+          <strong>Idtipoidentificacion:</strong>
+          <%= @cliente.idtipoidentificacion %>
+        </p>
+         <p>
+          <strong>Razonsocial:</strong>
+          <%= @cliente.razonSocial %>
+        </p>
 
-<p>
-  <strong>Direccion:</strong>
-  <%= @cliente.direccion %>
-</p>
+        <p>
+          <strong>Correo:</strong>
+          <%= @cliente.correo %>
+        </p>
 
-<p>
-  <strong>Telefonos:</strong>
-  <%= @cliente.telefonos %>
-</p>
+        
 
-<p>
-  <strong>Idtipocliente:</strong>
-  <%= @cliente.idtipocliente %>
-</p>
+       
+      </div>
+      <div class="col">
 
-<p>
-  <strong>Idcategoriacliente:</strong>
-  <%= @cliente.idcategoriacliente %>
-</p>
+        <p>
+          <strong>Telefonos:</strong>
+          <%= @cliente.telefonos %>
+        </p>
 
-<p>
-  <strong>Idestado:</strong>
-  <%= @cliente.idestado %>
-</p>
+        <p>
+          <strong>Direccion:</strong>
+          <%= @cliente.direccion %>
+        </p>
 
-<p>
-  <strong>Idgenero:</strong>
-  <%= @cliente.idgenero %>
-</p>
+        <p>
+          <strong>Idtipocliente:</strong>
+          <%= @cliente.idtipocliente %>
+        </p>
 
-<p>
-  <strong>Eliminado:</strong>
-  <%= @cliente.eliminado %>
-</p>
+        <p>
+          <strong>Idcategoriacliente:</strong>
+          <%= @cliente.idcategoriacliente %>
+        </p>
+
+        <p>
+          <strong>Idestado:</strong>
+          <%= @cliente.idestado %>
+        </p>
+
+        <p>
+          <strong>Idgenero:</strong>
+          <%= @cliente.idgenero %>
+        </p>
+
+        <p>
+          <strong>Eliminado:</strong>
+          <%= @cliente.eliminado %>
+        </p>
+      </div>
+    
+    </div>
+   
+  </div>
+
+</div>
+
 
 <%= link_to 'Edit', edit_cliente_path(@cliente) %> |
 <%= link_to 'Back', clientes_path %>
