--- a/app/views/productos/listar.html.erb
+++ b/app/views/productos/listar.html.erb
@@ -4,8 +4,8 @@
    <%= link_to 'Nuevo', new_producto_path, class:"btn btn-primary btn-sm mb-2" %>
 <%end %>
 <p id="notice"><%= notice %></p>
-<table class="table table-striped" >
-  <thead>
+<table class="table-responsive table">
+  <thead class="thead-dark">
     <tr>
        <th>ID</th>
       <th>Nombre</th>
