--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,23 +5,24 @@
 <div class="card p-3" style="width: 18rem;" >
   <img class="card-img-top" src="https://image.flaticon.com/icons/svg/265/265674.svg" alt="Card image cap">
   <div class="card-body">
-    <h5 class="card-title"><%= @user.usuario %> -- <%= @user.idrol %> </h5>
+  <% @usersExt.each do |user| %>
+    <h5 class="card-title"><%= user["usuario"] %> -- <%= user["rol"] %> </h5>
     
     <p class="card-text">
-       <strong>Identidad:</strong>
-      <%= @user.identidad %>
-     </p>
-
-    <p class="card-text">
-      <strong>Idtipoentidad:</strong>
-      <%= @user.idtipoentidad %>
+      <strong>rol usuario:</strong>
+      <%= user["rol"] %>
     </p>
 
     <p class="card-text">
-      <strong>Idestadousuario:</strong>
-      <%= @user.idestadousuario %>
+      <strong>tipo entidad:</strong>
+      <%= user["tipo"] %>
     </p>
-    
+
+    <p class="card-text">
+      <strong>estado usuario:</strong>
+      <%= user["estado"] %>
+    </p>
+    <% end %> 
     <%= link_to 'Editar', edit_user_path(@user) ,class:"btn btn-success btn-sm mb-2" %> 
     <%= link_to 'Regresar', users_path, class:"btn btn-info btn-sm mb-2 ml-2"%>
 
