Diseño de vista usuarios

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,8 +4,8 @@
 
 <p id="notice"><%= notice %></p>
 
-<table class="table table-striped">
-  <thead>
+<table class="table">
+  <thead class="thead-dark">
     <tr>
       <th>ID</th>
       <th>Usuario</th>
