--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -1,1 +1,32 @@
 <h4>Bienvenido a nuestra tienda !!!</h4>
+
+
+<div class="row">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+        <img class="d-block w-100" style="height:400px" src="https://www.exito.com/images/category/home/dinamicos/20180531/destacados/sliders/slider-combos-consolas-ps4.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+        <img class="d-block w-100" style="height:400px" src="https://www.exito.com/images/category/home/dinamicos/20180531/reacciones/4-combo-asus.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+        <img class="d-block w-100" style="height:400px" src="https://www.exito.com/images/category/home/dinamicos/20180531/destacados/sliders_televisor.jpg" alt="Third slide">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
+    </div>
+
+</div> 
