--- a/app/views/clientes/show.html.erb
+++ b/app/views/clientes/show.html.erb
@@ -79,5 +79,5 @@
 </div>
 
 
-<%= link_to 'Editar', edit_cliente_path(@cliente) %> |
-<%= link_to 'Atras', clientes_path %>
+<%= link_to 'Editar', edit_cliente_path(@cliente), class:'btn btn-primary mt-3' %> |
+<%= link_to 'Atras', clientes_path, class:'btn btn-dark mt-3' %>
