--- a/app/views/empleados/index.html.erb
+++ b/app/views/empleados/index.html.erb
@@ -2,8 +2,8 @@
 
 <h1>Empleados</h1>
 
-<table>
-  <thead>
+<table class="table">
+  <thead class="thead-dark">
     <tr>
       <th>ID</th>
       <th>Identificacion</th>
@@ -43,4 +43,4 @@
 
 <br>
 
-<%= link_to 'New Empleado', new_empleado_path %>
+<%= link_to 'Crear nuevo empleado', new_empleado_path, class:"btn btn-primary" %>
