--- a/app/views/valorparametros/index.html.erb
+++ b/app/views/valorparametros/index.html.erb
@@ -1,8 +1,8 @@
 <h4>Valorparametros</h4>
 <%= link_to 'New Valorparametro', new_valorparametro_path %>
 <p id="notice"><%= notice %></p>
-<table class="tabla">
-  <thead>
+<table class="table">
+  <thead class="thead-dark">
     <tr>
       <th>Id</th>
       <th>IdParametro</th>
