--- a/app/views/valorparametros/listar.html.erb
+++ b/app/views/valorparametros/listar.html.erb
@@ -5,7 +5,7 @@
  
  <p id="notice"><%= notice %></p>
 <table class="table table-striped">
-  <thead>
+  <thead class="thead-dark">
     <tr>
       <th>Id</th>
       <th>Valor</th>
