--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -78,6 +78,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit "Guardar", class:'btn btn-success' %>
+    <%= form.submit "Guardar", class:'btn btn-success btn-block btn-large' %>
   </div>
 <% end %>
