--- a/app/views/clientes/new.html.erb
+++ b/app/views/clientes/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Cliente</h1>
+<div style="width:70%; margin:auto">
+    <h1>Registrate!</h1>
+    <hr>
+    <%= render 'form', cliente: @cliente %>
+ </div>
 
-<%= render 'form', cliente: @cliente %>
-
-<%= link_to 'Back', clientes_path %>
+<%= link_to 'Back', clientes_path, class:'btn btn-dark' %>
