--- a/app/views/options/_form.html.erb
+++ b/app/views/options/_form.html.erb
@@ -11,47 +11,56 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :idpadre %>
-    <%= form.number_field :idpadre, id: :option_idpadre %>
-  </div>
+  <div class="form-group">
+    <div class="row">
+      <div class="col">
+      <%= form.label :idpadre %>
+      <%= form.number_field :idpadre, id: :option_idpadre , class:'form-control',required:''%>
+      </div>
+      <div class="col">
+        <%= form.label :opcion %>
+        <%= form.text_field :opcion, id: :option_opcion, class:'form-control',required:'' %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= form.label :opcion %>
-    <%= form.text_field :opcion, id: :option_opcion %>
-  </div>
+    <div class="row">
+      <div class="col">
+        <%= form.label :url %>
+        <%= form.text_field :url, id: :option_url, class:'form-control',required:'' %>
+      </div>
+      <div class="col">
+        <%= form.label :Estadoopcion %>
+        <%= form.text_field :estadoopcion, id: :option_estadoopcion, class:'form-control',required:'' %>
+      </div>
+      <div class="col">
+        <%= form.label :orden %>
+        <%= form.text_field :orden, id: :option_orden, class:'form-control',required:'' %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= form.label :url %>
-    <%= form.text_field :url, id: :option_url %>
-  </div>
 
-  <div class="field">
-    <%= form.label :estadoopcion %>
-    <%= form.text_field :estadoopcion, id: :option_estadoopcion %>
+    <div class="row">
+      <div class="col">
+        <%= form.label :controller %>
+        <%= form.text_field :controller, id: :option_controller, class:'form-control',required:'' %>
+      </div>    
+    </div>
   </div>
-
-  <div class="field">
-    <%= form.label :orden %>
-    <%= form.text_field :orden, id: :option_orden %>
-  </div>
-
-  <div class="field">
+        
+  <div class="form-group">
     <%= form.label :eshoja %>
-    <%= form.check_box :eshoja, id: :option_eshoja %>
+    <%= form.check_box :eshoja, id: :option_eshoja,required:'' %>
   </div>
 
-  <div class="field">
-    <%= form.label :controller %>
-    <%= form.text_field :controller, id: :option_controller %>
-  </div>
-
-  <div class="field">
+  <div class="form-group">
     <%= form.label :eliminado %>
-    <%= form.check_box :eliminado, id: :option_eliminado %>
+    <%= form.check_box :eliminado, id: :option_eliminado,required:'' %>
+  </div>
+
+  <div class="form-group">
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Guardar" ,class:'btn btn-success' %>
+    <% end %>
   </div>
-<% end %>
