--- a/app/views/options/index.html.erb
+++ b/app/views/options/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Options</h1>
 
-<table class="table">
+<table class="table-responsive table">
   <thead class="thead-dark">
     <tr>
       <th>ID</th>
